@@ -5,14 +5,17 @@ public class Arbitre {
     private static final int TIMEOUT_SECONDS = 3;
 
     public static void main(String[] args) throws Exception {
-        Process A = Runtime.getRuntime().exec("java -cp c:\\Users\\Jean-Charles\\Documents\\Work\\Cours\\AIGame\\AIGame\\out\\production\\AIGame\\ JoueurExterne JoueurA");
-        //        Process A = new ProcessBuilder("./A").start();
-        // Pour lancer un code java COMPILE : voir https://www.baeldung.com/java-process-api
-        // process = Runtime.getRuntime().exec("java -cp src/main/java com.baeldung.java9.process.OutputStreamExample");
-        // sinon il faut lancer la compil avant (puis lancer le code compilé):
-//        Process process = Runtime.getRuntime().exec("javac -cp src src\\main\\java\\com\\baeldung\\java9\\process\\OutputStreamExample.java");
-        Process B = Runtime.getRuntime().exec("java -cp c:\\Users\\Jean-Charles\\Documents\\Work\\Cours\\AIGame\\AIGame\\out\\production\\AIGame\\ JoueurExterne JoueurB");
-        //Process B = new ProcessBuilder("./B").start();
+//         Process A = Runtime.getRuntime().exec("java -cp c:\\Users\\Jean-Charles\\Documents\\Work\\Cours\\AIGame\\AIGame\\out\\production\\AIGame\\ JoueurExterne JoueurA");
+//         //        Process A = new ProcessBuilder("./A").start();
+//         // Pour lancer un code java COMPILE : voir https://www.baeldung.com/java-process-api
+//         // process = Runtime.getRuntime().exec("java -cp src/main/java com.baeldung.java9.process.OutputStreamExample");
+//         // sinon il faut lancer la compil avant (puis lancer le code compilé):
+// //        Process process = Runtime.getRuntime().exec("javac -cp src src\\main\\java\\com\\baeldung\\java9\\process\\OutputStreamExample.java");
+//         Process B = Runtime.getRuntime().exec("java -cp c:\\Users\\Jean-Charles\\Documents\\Work\\Cours\\AIGame\\AIGame\\out\\production\\AIGame\\ JoueurExterne JoueurB");
+//         //Process B = new ProcessBuilder("./B").start();
+
+        Process A = new ProcessBuilder("./awale").start();
+        Process B = new ProcessBuilder("./awale").start();
 
         Joueur joueurA = new Joueur("A", A);
         Joueur joueurB = new Joueur("B", B);
@@ -36,10 +39,10 @@ public class Arbitre {
                 System.out.println("RESULT LIMIT");
             }
             // Validation du coup
-            if (!coupValide(reponse)) {
-                disqualifier(courant, "coup invalide : " + reponse);
-                break;
-            }
+            // if (!coupValide(reponse)) {
+            //     disqualifier(courant, "coup invalide : " + reponse);
+            //     break;
+            // }
 
             System.out.println(courant.nom + " -> " + coup);
             // Fin de partie
